bug fixes again